[project]
name = "a_random_package"
version = "0.0.1"
authors = [
  { name="Joseph Kuntson", email="jmknutson2012@gmail.com" },
]
description = "A Test"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Joey1222/A-Random-Package"
"Bug Tracker" = "https://github.com/Joey1222/A-Random-Package/issues"