[metadata]
name = A random package
version = 0.0.1
author = Joseph Kuntson
author_email = jmknutson2012@gmail.com
description = For generating A ESTHETIC ascii art 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Joey1222/A-Random-Package
classifiers = 
    Programming Language :: Python :: 3 
    License :: OSI Approved :: MIT License 
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.11
include_package_data = True